update doc swg
